[package]
name = "metromc"
version = "0.2.0"
edition = "2021"
authors = ["Emil Koutanov"]
license = "MIT"
description = "Markov chain Monte Carlo sampling using the Independence Metropolis-Hastings algorithm."
repository = "https://github.com/obsidiandynamics/mcmc"
keywords = ["random", "sampling", "mcmc"]
exclude = ["/images", "/bin", "/.idea", "/.github", "/coverage", "/doc", "/examples"]

[dependencies]
statrs = "0.16.0"
tinyrand = "0.5.0"

[dev-dependencies]
assert_float_eq = "1.1.3"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "cri_gaussian"
harness = false